samples/_failures_safe/1761403278_1b3808_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3ee6040.c: In function ‘main’:
./samples/SAFE/__tmp_a3ee6040.c:146:13: error: expected declaration or statement at end of input
  146 |             fprintf(stderr, "Error: Invalid choice\n");
      |             ^~~~~~~
./samples/SAFE/__tmp_a3ee6040.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a3ee6040.c:146:13: error: expected declaration or statement at end of input
